--- a/css/styles/sun-valley.css
+++ b/css/styles/sun-valley.css
@@ -217,9 +217,9 @@
 		--arrowpanel-menuitem-padding: 6px 12px !important;
 		--arrowpanel-menuitem-margin: var(--uwp-context-item-margin) !important;
 		--arrowpanel-menuitem-border-radius: var(--uwp-tags-control-radius) !important;
-		--arrowpanel-border-radius: var(--uwp-tags-overlay-radius) !important;
-		--arrowpanel-border-color: var(--uwp-context-border) !important;
-		--arrowpanel-background: var(--uwp-context-background) !important;
+		--arrowpanel-border-radius: 0px !important;
+		--arrowpanel-border-color: transparent !important;
+		--arrowpanel-background: transparent !important;
 		--panel-subview-body-padding: var(--uwp-context-margin) !important;
 		--panel-separator-color: var(--uwp-context-separator) !important;
 		--panel-separator-margin: var(--uwp-context-separator-margin) !important;
